TWC3167-1645:CSS Changes, TWC3167-2790:Filter Spacing CSS Fix. (#1212)

--- a/Intel.MyDeals/Client/src/app/advanceSearch/globalSearch/globalSearch.component.css
+++ b/Intel.MyDeals/Client/src/app/advanceSearch/globalSearch/globalSearch.component.css
@@ -83,7 +83,7 @@ kendo-dialog-actions.global-style.k-dialog-buttongroup {
 
 .global-titles-style {
     font-family: 'Intel Clear' !important;
-    margin: 10px 0px 0px 4px !important;
+    margin: 10px 0px 0px 0px !important;
 }
 
 .k-content.k-window-content.k-dialog-content .global-titles-style {
