--- a/Intel.MyDeals/Client/src/app/reporting/reporting.component.css
+++ b/Intel.MyDeals/Client/src/app/reporting/reporting.component.css
@@ -80,3 +80,6 @@ div.overFlowDash {
 .mainBodyStyle:has(reporting-dashboard) {
     overflow-y: auto !important;
 }
+.col-md-fixhyt {
+    height: calc(100vh - 200px);
+}
